--- a/index.html
+++ b/index.html
@@ -106,23 +106,22 @@
           </div>
           <div class="text-container">
             <p>
-              A passionate and skilled DevOps, SRE, and Cloud Engineer with a strong background in infrastructure
-              provisioning, automation, and monitoring. I have completed and been certified by Google Cloud for 
-              Associate Cloud Engineer and AWS for AWS Certified Cloud Practitioner.<br></br>
+              A passionate and skilled DevOps and Cloud Engineer with a strong background in infrastructure
+              provisioning, automation, and monitoring.<br></br>
             </p>
             <p>
               Have experience working with tools such as Jenkins, Terraform, and Ansible to streamline development 
               processes and ensure efficient code deployment. Proficient in managing and monitoring cloud infrastructure 
-              services on AWS and GCP, as well as maintaining high availability in Kubernetes-based container clusters. 
-              Successfully implemented monitoring and logging tools like ELK, Grafana, and Datadog to ensure comprehensive 
-              visibility into system performance and implemented GitOps for managing infrastructure as code. My expertise 
+              services on AWS, as well as maintaining high availability in Kubernetes-based container clusters. 
+              Successfully implemented monitoring and logging tools like ELK, and Grafana to ensure comprehensive 
+              visibility into system performance and implemented Terrafrom and AWS cloud Formation for managing infrastructure as code. My expertise 
               also includes integrating automation testing into the CI/CD pipeline and developing scripts to automate tasks, 
               improving efficiency and reducing manual effort.<br></br> 
             </p>
             <p>
               With a Bachelor's degree in Computer Science and a strong GPA, I am committed to continuous learning 
               and professional growth. I am seeking opportunities to leverage my skills and contribute to the 
-              success of DevOps, SRE and cloud engineering projects.
+              success of DevOps and cloud engineering projects.
 
             </p>
           </div>
