--- a/index.html
+++ b/index.html
@@ -375,7 +375,7 @@
         src="./assets/arrow.png"
         alt="Arrow icon"
         class="icon arrow"
-        onclick="location.href='./#contact'"
+        onclick="location.href='./#contact'"""
       />
     </section>-->
     <section id="contact">
